// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail renders 1`] = `
<svg
  aria-label="[title]"
  role="img"
  viewBox="b4de9ef077a0a2ad684a1d8e6916ebc4"
  width={20}
>
  <title>
    IconEmail
  </title>
  <g
    fill="#1D1D1B"
    fillRule="nonzero"
  >
    <path
      d="1d7aae45398f94fa23694b6080b89032"
    />
  </g>
</svg>
`;

exports[`2. iconfacebook renders 1`] = `
<svg
  aria-label="[title]"
  role="img"
  viewBox="bd9a71c8a3142edf7cab6a62a2277378"
  width={20}
>
  <title>
    IconFacebook
  </title>
  <g
    fill="#1D1D1B"
    fillRule="nonzero"
  >
    <path
      d="ff2ae287381fd0583b3a4df9bc45c5be"
    />
  </g>
</svg>
`;

exports[`3. iconforwardarrow renders 1`] = `
<svg
  height={12}
  viewBox="5c14eb9241a8569e247b0186d9e66a8a"
  width={7}
>
  <g
    fill="#006699"
  >
    <path
      d="cf23b8f47ac97eeec14ee4c65e472078"
    />
  </g>
</svg>
`;

exports[`4. iconstar renders 1`] = `
<svg
  aria-label="[title]"
  role="img"
  viewBox="d694bccd173b195f8a08c0256f451fd8"
  width={20}
>
  <title>
    IconStar
  </title>
  <path
    d="53af37f285b7e6e57da32c1366718e90"
    fill="#006699"
  />
</svg>
`;

exports[`5. icontwitter renders 1`] = `
<svg
  aria-label="[title]"
  role="img"
  viewBox="f0ca3b77f62fa9136cdfd9a3f847d07b"
  width={20}
>
  <title>
    IconTwitter
  </title>
  <path
    d="0407fd6a3edc199eb6063d0ebd2c66ad"
    fill="#006699"
  />
</svg>
`;

exports[`6. iconvideo renders 1`] = `
<svg
  aria-label="[title]"
  role="img"
  viewBox="32c562c1b3cee8479f67d0cbd8edef4d"
  width={20}
>
  <title>
    IconVideo
  </title>
  <rect
    fill="#1D1D1B"
    height="40"
    width="50"
    x="0"
    y="0"
  />
  <polygon
    fill="#1D1D1B"
    points="5a4b8b2ca01315005e925a083a2b7521"
  />
</svg>
`;

exports[`7. iconvideo360player renders 1`] = `
<svg
  aria-label="[title]"
  role="img"
  viewBox="544726bb051c5bacf72288529e947083"
  width={20}
>
  <title>
    IconVideo360Player
  </title>
  <path
    d="92444cc628d352fe07031cfb7b426ccf"
    fill="#006699"
  />
</svg>
`;

exports[`8. thestlogo renders 1`] = `
<svg
  aria-label="[title]"
  role="img"
  viewBox="432b2b997b72ed04860614d58bfe21fa"
  width={20}
>
  <title>
    TheSTLogo
  </title>
  <path
    d="0f4e958f2b4ff0e7612914c8ca56d8f6"
    fill="#FFFFFF"
  />
</svg>
`;

exports[`9. thetimeslogo renders 1`] = `
<svg
  aria-label="[title]"
  role="img"
  viewBox="064d9dc888226a281482b4aa9646de05"
  width={20}
>
  <title>
    TheTimesLogo
  </title>
  <path
    d="9d34e249e9f10c48ae181fd7ef01d8e7"
    fill="#FFFFFF"
  />
</svg>
`;
